# xbyak_riscv

./: .gitignore  Android.bp  CMakeLists.txt  Makefile  meson.build  readme.md
.github/workflows/: main.yml
doc/: changelog.md  install.md  usage.md
sample/: CMakeLists.txt  Makefile  add.cpp  bf.cpp  cpuinfo.cpp  data-code.cpp  vector_add_rvv.cpp  vector_add_rvv_f32.cpp
test/: Makefile  gen_test.py  gen_test_svc.py  gen_test_vec.py  jmp_test.cpp  misc_test.cpp  out.cpp  run_vec_docker.sh  test.sh
xbyak_riscv/: xbyak_riscv.hpp  xbyak_riscv_csr.hpp  xbyak_riscv_mnemonic.h  xbyak_riscv_mnemonic.hpp  xbyak_riscv_util.hpp  xbyak_riscv_v.hpp
